Project

General

Profile

Actions

Bug #9913

closed

Digest == throws TypeError when testing against nil

Bug #9913: Digest == throws TypeError when testing against nil

Added by Malakai97 (Bryan Hockey) about 12 years ago. Updated almost 12 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 1.9.3p194 (2012-04-20 revision 35410) [x86_64-linux]
[ruby-core:62967]

Description

Also present in ruby -v: jruby 1.7.10 (1.9.3p392) 2014-01-09 c4ecd6b on OpenJDK 64-Bit Server VM 1.7.0_55-b14 [linux-amd64]

To recreate:

require 'digest'
x = Digest::SHA256.new()
x == nil
TypeError: can't convert nil into String

Workaround:
w1: use #nil?
w2: reverse rhs, lhs, e.g. if nil == some_digest

Updated by Eregon (Benoit Daloze) about 12 years ago Actions #1 [ruby-core:62969]

  • Status changed from Open to Closed
  • % Done changed from 0 to 100

Applied in changeset r46368.


digest.c: fix #== for non-string arguments

  • ext/digest/digest.c (rb_digest_instance_equal):
    fix #== for non-string arguments. [ruby-core:62967] [Bug #9913]
  • test/digest/test_digest.rb: add test for above.

Updated by nagachika (Tomoyuki Chikanaga) about 12 years ago Actions #2 [ruby-core:63562]

  • Backport changed from 2.0.0: UNKNOWN, 2.1: UNKNOWN to 2.0.0: REQUIRED, 2.1: REQUIRED

Updated by nagachika (Tomoyuki Chikanaga) about 12 years ago Actions #3 [ruby-core:63691]

  • Backport changed from 2.0.0: REQUIRED, 2.1: REQUIRED to 2.0.0: REQUIRED, 2.1: DONE

Backported into ruby_2_1 branch at r46809.

Updated by usa (Usaku NAKAMURA) almost 12 years ago Actions #4 [ruby-core:64687]

  • Backport changed from 2.0.0: REQUIRED, 2.1: DONE to 2.0.0: DONE, 2.1: DONE

backported into ruby_2_0_0 at r47333.

Actions

Also available in: PDF Atom